refs #231 - code page 424 support in H3270 - Enabled suppor for host.codePage and host.port